Fix mobile sidebar overflow

--- a/src/css/sidebar.css
+++ b/src/css/sidebar.css
@@ -165,7 +165,7 @@
       > aside[data-sidebar] {
         grid-column: 1;
         z-index: 2;
-        width: var(--sidebar-width);
+        width: min(var(--sidebar-width), 100vw);
         transform: translateX(-100%);
         transition: transform var(--transition);
         box-shadow: var(--shadow-large);
